feat(#2): Updating winner output function, adding names to Rank cards, adding output hand dipslay, adding som new Tests